--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
 
         <div style="height: 1000px">
             <h2 class="myH2">Hello! I'm Katie.</h2>
-            <p class="myp">Check out my work!</p>
+            <p class="myp">I'm a designer and programmer dedicated to accessible and data-driven design.</p>
 
         </div>
 
