--- a/about.html
+++ b/about.html
@@ -33,15 +33,15 @@
         <section class="start"></section>
 
         <div style="height: 1000px">
-            <h2 class="myH2">Hello! I'm Katie.</h2>
-            <p class="myp">I'm a designer and programmer dedicated to accessible and data-driven design.</p>
-
+            <h2 class="myH2">👩🏻‍💻 It's great to meet you again!</h2>
+            <p class="myp">Here's some more info about me:</p>
+            
         </div>
 
         <section class="home"></section>
 
         <div style="height: 1000px">
-                <h2 class="myH2">Projects</h2>
+                <h2 class="myH2">Resume</h2>
         
                 <p class="myp">Check out my work!</p>
                 <p class="myP">
