--- a/playground.html
+++ b/playground.html
@@ -33,8 +33,8 @@
         <section class="start"></section>
 
         <div style="height: 1000px">
-            <h2 class="myH2">Hello! I'm Katie.</h2>
-            <p class="myp">Check out my work!</p>
+            <h2 class="myH2">Welcome to my ✨playground✨!</h2>
+            <p class="myp">Here you can find some of my side projects.</p>
 
         </div>
 
