--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
         <section class="start"></section>
 
         <div style="height: 1000px">
-            <h2 class="myH2">Hello! I'm Katie.</h2>
-            <p class="myp">Check out my work!</p>
+            <h2 class="myH2">Hello, 🌎. I'm Katie.</h2>
+            <p class="myp">I'm a <strong><span style="color: #62C6F2">designer</span></strong> && <strong><span style="color: #62C6F2">programmer</span></strong> dedicated to <strong><span style="color: #62C6F2">accessible</span></strong> design driven by <strong><span style="color: #62C6F2">data</span></strong>.</p>
 
+        
         </div>
 
         <section class="home"></section>
